--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "receive another log ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-server": "node src/server.js",
+    "start": "node src/server.js && npm run --prefix log-app start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "adbkit-logcat": "^2.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
