--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/ws": "^7.4.1",
+    "logkitty": "^0.7.1",
     "typescript": "^4.2.4"
   }
 }
